--- a/0411_RockPaperScissor/index.html
+++ b/0411_RockPaperScissor/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="button" id="rock">ROCK</div>
+<div class="button" x="2" y="2" id="rock">ROCK</div>
 <div class="button" id="paper">PAPER</div>
 <div class="button" id="scissor">SCISSOR</div>
 
