--- a/0412_TicTacToe/index.html
+++ b/0412_TicTacToe/index.html
@@ -4,9 +4,27 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/script.js"></script>
+	<script src="js/tictactoe.js"></script>
 </head>
 <body>
+
+<div class="board">
+	<div class="row">
+		<div data-x="0" data-y="0" class="space" id="1"></div>
+		<div data-x="0" data-y="1" class="space" id="2"></div>
+		<div data-x="0" data-y="2" class="space" id="3"></div>
+	</div>	
+	<div class="row">
+		<div data-x="1" data-y="0" class="space" id="4"></div>
+		<div data-x="1" data-y="1" class="space" id="5"></div>
+		<div data-x="1" data-y="2" class="space" id="6"></div>
+	</div>
+	<div class="row">
+		<div data-x="2" data-y="0" class="space" id="7"></div>
+		<div data-x="2" data-y="1" class="space" id="8"></div>
+		<div data-x="2" data-y="2" class="space" id="9"></div>
+	</div>
+</div>
 	
 </body>
 </html>
