--- a/TicTacToe_0412/angular_ver/index.html
+++ b/TicTacToe_0412/angular_ver/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="js/tictactoe.js"></script>
 </head>
 <body x-ng-app="" x-ng-controller="TicTacToeController">
 
