tetris: win conditions work

--- a/ClassLabs/0416-angular-directives/dinosaurs-complete/index.html
+++ b/ClassLabs/0416-angular-directives/dinosaurs-complete/index.html
@@ -18,6 +18,8 @@
 
   <div class="change">Change this greeting: <input type="text" x-ng-model="greeting"></div>
 
+  <h2 style="text-align:center" x-ng-bind="count"></h2>
+
   <div id="container">
       <div id="dinosaur"></div>
       <div id="appmain">
