--- a/TicTacToe_0412/angular_ver/tetris.html
+++ b/TicTacToe_0412/angular_ver/tetris.html
@@ -24,15 +24,20 @@
 
 </div>
 
+<button ng-click="randomPiece()">Random Piece</button>
+<button ng-click="switchPlayer()">Switch Player</button>
+<button ng-click="playMusic()">Play Music</button>
+<button ng-click="displayBoard()">Display Board</button>
+<button ng-click="rotatePiece()">Rotate Piece</button>
+<button ng-click="displayWin()">Check Win</button>
+
 <div class="info">
 	<h2>{{ "Player " + currentPlayer + "'s Turn" }}</h2>
 	<p>{{ "Player 1: " + scoreboard[0] }}</p>
 	<p>{{ "Player 2: " + scoreboard[1] }}</p>
 </div>
 
-<button ng-click="randomPiece()">Random Piece</button>
-<button ng-click="switchPlayer()">Switch Player</button>
-<button ng-click="playMusic()">Play Music</button>
+
 
 
 <audio src="tetris.mp3" id="tetris"></audio>
