--- a/TicTacToe_0412/angular_ver/tetris.html
+++ b/TicTacToe_0412/angular_ver/tetris.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/tetris.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+	<script src="js/angular.min.js"></script>
 	<script src="js/tetris.js"></script>
 </head>
 
