--- a/MiniFireBaseApp_0423/index.html
+++ b/MiniFireBaseApp_0423/index.html
@@ -5,20 +5,10 @@
 	<script src="https://cdn.firebase.com/v0/firebase.js"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/0.6.0/angularfire.min.js"></script>
 	<script src="main.js"></script>
-	<title>Mini Firebase App</title>
+	<title>Baby Firebase App</title>
 </head>
 <body x-ng-app="BabyApp" x-ng-controller="BabyController">
-	<h1>Mini Firebase App</h1>
-	<ul>
-		<li x-ng-repeat="i in issues">
-		{{i.title}} -- {{i.body}}
-		</li>
-	</ul>
-	Title: 
-	<input type="text" x-ng-model="title">
-
-	Body:
-	<textarea x-ng-model="body" cols="80" rows="10"></textarea>
-	<input type="button" x-ng-click="addOne();" value="Add Something!">
+	<h1>Baby Firebase App</h1>
+	<button type="text" x-ng-click="btnIWannaPlayClick()">Hello</button>
 </body>
 </html>
