--- a/TicTacToe_0412/angular_ver/tetris.html
+++ b/TicTacToe_0412/angular_ver/tetris.html
@@ -12,30 +12,34 @@
 
 
 
-<body x-ng-app="" x-ng-controller="TicTacToeController">
+<body x-ng-app="" x-ng-controller="TicTacToeController" x-ng-keypress="keyPress($event)">
 
 <h1>Tic Tac Tetris</h1>
 
-<div class="board">
-
-	<div class="row" x-ng-repeat="row in board track by $index">
-		<div class="space" x-ng-repeat="space in row track by $index" x-ng-click="placePiece(space)" x-ng-mouseenter="resetHover(); hoverPiece(space)" x-ng-style="hoverColor(space);" x-ng-class="{ 'player_one': space.player == 1, 'player_two': space.player == 2 }"></div>
+<div class="main_container">
+	<div class="score_left" x-ng-class="{ 'active': currentPlayer == 1 }">{{scoreboard[0]}}</div>
+	<div class="board">
+		<div class="row" x-ng-repeat="row in board track by $index">
+			<div class="space" x-ng-repeat="space in row track by $index" x-ng-click="makeMove(space)" x-ng-mouseenter="hoverPiece(space)" x-ng-style="hoverColor(space);" x-ng-class="{ 'player_one': space.player == 1, 'player_two': space.player == 2 }"></div>
+		</div>
 	</div>
-
+	<div class="score_right" x-ng-class="{ 'active': currentPlayer == 2 }">{{scoreboard[1]}}</div>
 </div>
 
-<button ng-click="randomPiece()">Random Piece</button>
+<p ng-if="checkWin()">Player Wins<p>
+
+<!-- <button ng-click="randomPiece()">Random Piece</button>
 <button ng-click="switchPlayer()">Switch Player</button>
 <button ng-click="playMusic()">Play Music</button>
 <button ng-click="displayBoard()">Display Board</button>
 <button ng-click="rotatePiece()">Rotate Piece</button>
-<button ng-click="displayWin()">Check Win</button>
+<button ng-click="displayWin()">Check Win</button> -->
 
-<div class="info">
+<!-- <div class="info">
 	<h2>{{ "Player " + currentPlayer + "'s Turn" }}</h2>
 	<p>{{ "Player 1: " + scoreboard[0] }}</p>
 	<p>{{ "Player 2: " + scoreboard[1] }}</p>
-</div>
+</div> -->
 
 
 
